--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,27 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2496 2009/04/06 01:08:13 hd_brummy Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2501 2009/04/07 04:07:36 darkside Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  07 Apr 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  p.mask app-shells/bash-completion-config for removal - bug 253878
+
+  06 Apr 2009; Paul Varner <fuzzyray@gentoo.org> package.mask:
+  Updated comments for app-portage/udept.
+
+  06 Apr 2009; Benedikt Böhm <hollow@gentoo.org> package.mask:
+  remove qmail.eclass based ebuilds from p.mask
+
+  06 Apr 2009; Peter Volkov <pva@gentoo.org> package.mask:
+  All patches accepted upstream and all problems with openrc resolved long
+  time ago... unmask vzctl.
+
+  06 Apr 2009; Zac Medico <zmedico@gentoo.org> arch/base/use.mask:
+  Mask the amd64-fbsd flag where appropriate. It's already unmasked in
+  arch/amd64-fbsd/use.mask.
 
   06 Apr 2009; Joerg Bornkessel <hd_brummy@gentoo.org> package.mask:
   removed hardmask for xxv, xxv-skins
