--- a/profiles/arch/arm/ChangeLog
+++ b/profiles/arch/arm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/ARM profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.30 2009/04/05 17:33:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.34 2009/04/06 18:08:58 armin76 Exp $
+
+  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add lapack to use.mask
+
+  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add mpi and lasi to use.mask
 
   05 Apr 2009; Raúl Porcel <armin76@gentoo.org> -package.mask:
   Remove gnome-2.22 mask
