--- a/profiles/arch/sh/ChangeLog
+++ b/profiles/arch/sh/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/sh profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sh/ChangeLog,v 1.20 2009/04/05 17:26:16 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sh/ChangeLog,v 1.23 2009/04/06 18:09:22 armin76 Exp $
+
+  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add lapack to use.mask
+
+  06 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add mpi and lasi to use.mask
 
   05 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Use.mask gnomecd
