--- a/profiles/arch/arm/ChangeLog
+++ b/profiles/arch/arm/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/ARM profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.34 2009/04/06 18:08:58 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.36 2009/04/08 13:37:05 armin76 Exp $
+
+  08 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add cblas to use.mask
+
+  07 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add fusion to use.mask
 
   06 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Add lapack to use.mask
