--- a/profiles/arch/s390/ChangeLog
+++ b/profiles/arch/s390/ChangeLog
@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo/s390 profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/s390/ChangeLog,v 1.11 2009/03/27 11:01:23 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/s390/ChangeLog,v 1.13 2009/04/08 13:34:39 armin76 Exp $
+
+  08 Apr 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add lasi to use.mask
 
   27 Mar 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask:
-  P.use.mask net-dns/avahi python, since it needs gtk USe-flag
+  P.use.mask net-dns/avahi python, since it needs gtk USE-flag
 
   11 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Add lyx to use.mask
