--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13629 (12 Jun 2009)
+
+  12 Jun 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13595.ebuild, +portage-2.2.00.13629.ebuild:
+  Version bump
+
 *portage-2.2.00.13625 (19 May 2009)
 
   19 May 2009; Fabian Groffen <grobian@gentoo.org>
