update patch for return of Linux-style versioning on Darwin, like it was on 1.5

--- a/eclass/ELT-patches/darwin-conf/2.2.4
+++ b/eclass/ELT-patches/darwin-conf/2.2.4
@@ -1,6 +1,11 @@
 --- configure
 +++ configure
-@@ -12172,7 +12172,7 @@
+@@ -12172,11 +12172,11 @@
+   version_type=darwin
+   need_lib_prefix=no
+   need_version=no
+-  library_names_spec='${libname}${release}${major}$shared_ext ${libname}$shared_ext'
++  library_names_spec='${libname}${release}${shared_ext}$versuffix ${libname}${release}${shared_ext}$major ${libname}${shared_ext}'
    soname_spec='${libname}${release}${major}$shared_ext'
    shlibpath_overrides_runpath=yes
    shlibpath_var=DYLD_LIBRARY_PATH
