--- a/eclass/ELT-patches/darwin-conf/2.2.4
+++ b/eclass/ELT-patches/darwin-conf/2.2.4
@@ -5,7 +5,7 @@
    need_lib_prefix=no
    need_version=no
 -  library_names_spec='${libname}${release}${major}$shared_ext ${libname}$shared_ext'
-+  library_names_spec='${libname}${release}${shared_ext}$versuffix ${libname}${release}${shared_ext}$major ${libname}${shared_ext}'
++  library_names_spec='${libname}${release}${versuffix}$shared_ext ${libname}${release}${major}$shared_ext ${libname}$shared_ext'
    soname_spec='${libname}${release}${major}$shared_ext'
    shlibpath_overrides_runpath=yes
    shlibpath_var=DYLD_LIBRARY_PATH
