--- a/perl-core/Compress-Raw-Zlib/ChangeLog
+++ b/perl-core/Compress-Raw-Zlib/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for perl-core/Compress-Raw-Zlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Zlib/ChangeLog,v 1.4 2009/06/03 22:22:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Compress-Raw-Zlib/ChangeLog,v 1.6 2009/06/13 15:47:58 jer Exp $
+
+  13 Jun 2009; Jeroen Roovers <jer@gentoo.org>
+  Compress-Raw-Zlib-2.020.ebuild:
+  Stable for HPPA (bug #273141).
+
+  12 Jun 2009; Ferris McCormick <fmccor@gentoo.org>
+  Compress-Raw-Zlib-2.020.ebuild:
+  Sparc stable, Bug #273141.
 
 *Compress-Raw-Zlib-2.020 (03 Jun 2009)
 
