--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  17 Jun 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
+  updated subversion mask for interix - still not working
+
   07 Jun 2009; Fabian Groffen <grobian@gentoo.org>
   darwin/macos/package.mask:
   gnome-base/gconf-2.26.2 has the same linkage problem as 2.26.0
