--- a/profiles/arch/sparc/ChangeLog
+++ b/profiles/arch/sparc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/sparc profile
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.47 2009/06/09 18:56:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sparc/ChangeLog,v 1.49 2009/06/16 18:42:15 armin76 Exp $
+
+  16 Jun 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask, use.mask:
+  Add dev-util/subversion kde to package.use.mask as it needs kde4
 
   09 Jun 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask:
   Add dev-python/PyQt4 assistant masking
