--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  19 Jun 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
+  masked libiconv 1.13 on interix - doesnt build
+
   17 Jun 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
   updated subversion mask for interix - still not working
 
