--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  19 Jun 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Unmask sandbox-2, since we should have a patched up for Prefix version
+  now.
+
   19 Jun 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
   masked libiconv 1.13 on interix - doesnt build
 
