--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  20 Jun 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Removed mask entries for no longer existing packages/ebuilds, thanks idl0r
+
   19 Jun 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Unmask sandbox-2, since we should have a patched up for Prefix version
   now.
