--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  20 Jun 2009; Fabian Groffen <grobian@gentoo.org>
+  windows/interix/3.5/package.mask, windows/interix/package.mask:
+  clean up windows/* masks
+
   20 Jun 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Removed mask entries for no longer existing packages/ebuilds, thanks idl0r
 
