--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -3,6 +3,10 @@
 # $Id$
 
   20 Jun 2009; Fabian Groffen <grobian@gentoo.org>
+  bsd/freebsd/7.1/package.mask, bsd/freebsd/7.2/package.mask:
+  clean up bsd/* masks
+
+  20 Jun 2009; Fabian Groffen <grobian@gentoo.org>
   sunos/solaris/5.10/x64/package.mask, sunos/solaris/5.11/x64/package.mask,
   sunos/solaris/package.mask:
   clean up sunos/* masks
