--- a/sys-devel/gdb-apple/ChangeLog
+++ b/sys-devel/gdb-apple/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gdb-apple
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+*gdb-apple-966 (20 Jun 2009)
+
+  20 Jun 2009; Fabian Groffen <grobian@gentoo.org> +gdb-apple-966.ebuild:
+  Version bump to Developer Tools 3.1.3 version
 
   21 Dec 2008; Fabian Groffen <grobian@gentoo.org> gdb-apple-962.ebuild,
   gdb-apple-962.ebuild, gdb-apple-962.ebuild:
