--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-devel/gcc-apple
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Id$
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc-apple/ChangeLog,v 1.5 2009/06/21 10:27:55 grobian Exp $
 
 *gcc-apple-4.2.1_p5574 (20 Jun 2009)
 *gcc-apple-4.0.1_p5493 (20 Jun 2009)
