--- a/sys-apps/darwin-miscutils/ChangeLog
+++ b/sys-apps/darwin-miscutils/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/darwin-miscutils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/darwin-miscutils/ChangeLog,v 1.1 2009/06/21 13:31:36 grobian Exp $
 
 *darwin-miscutils-6 (19 Jun 2008)
 
