--- a/sys-apps/aix-miscutils/ChangeLog
+++ b/sys-apps/aix-miscutils/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/aix-miscutils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/aix-miscutils/ChangeLog,v 1.1 2009/06/21 13:38:16 grobian Exp $
 
 *aix-miscutils-0.1.1634 (09 Jul 2008)
 
