--- a/net-ftp/lftp/ChangeLog
+++ b/net-ftp/lftp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/lftp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.199 2009/06/18 18:01:24 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.201 2009/06/19 20:31:41 ranger Exp $
+
+  19 Jun 2009; Brent Baude <ranger@gentoo.org> lftp-3.7.14.ebuild:
+  stable ppc64, bug 274626
+
+  19 Jun 2009; Raúl Porcel <armin76@gentoo.org> lftp-3.7.14.ebuild:
+  alpha/arm/ia64/s390/sparc stable wrt #274626
 
   18 Jun 2009; Christian Faulhammer <fauli@gentoo.org> lftp-3.7.14.ebuild:
   stable x86, bug 274626
