--- a/net-misc/ntp/ChangeLog
+++ b/net-misc/ntp/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for net-misc/ntp
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ntp/ChangeLog,v 1.145 2009/05/25 16:05:20 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ntp/ChangeLog,v 1.148 2009/06/20 23:12:04 robbat2 Exp $
+
+  20 Jun 2009; Robin H. Johnson <robbat2@gentoo.org> +ntp-4.2.4_p6.ebuild:
+  Re-add _p6 until bug 274863 is resolved, but add the MOD_NANO patch so it
+  compiles.
+
+  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> files/ntp.conf:
+  Update dhcp comments in ntp.conf #270672 by Rabbe Fogelholm.
+
+  20 Jun 2009; Mike Frysinger <vapier@gentoo.org> ntp-4.2.4_p7.ebuild:
+  Add USE=vim-syntax #272692 by Dan Fego.
 
   25 May 2009; Brent Baude <ranger@gentoo.org> ntp-4.2.4_p7.ebuild:
   Marking ntp-4.2.4_p7 ppc64 and ppc for bug 263033
