--- a/sys-auth/pambase/ChangeLog
+++ b/sys-auth/pambase/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for sys-auth/pambase
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.67 2009/05/15 18:54:15 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pambase/ChangeLog,v 1.69 2009/06/20 21:01:37 flameeyes Exp $
+
+*pambase-20090620.1 (20 Jun 2009)
+
+  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  -pambase-20090620.ebuild, +pambase-20090620.1.ebuild:
+  Further pam_tally2 fixes.
+
+*pambase-20090620 (20 Jun 2009)
+
+  20 Jun 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  +pambase-20090620.ebuild:
+  Bump so to enable pam_tall2 properly when building with Linux-PAM-1.1.0.
 
 *pambase-20090515 (15 May 2009)
 
