--- a/www-client/mozilla-firefox-bin/ChangeLog
+++ b/www-client/mozilla-firefox-bin/ChangeLog
@@ -1,6 +1,20 @@
 # ChangeLog for www-client/mozilla-firefox-bin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.191 2009/06/16 16:16:26 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox-bin/ChangeLog,v 1.193 2009/06/20 10:56:49 armin76 Exp $
+
+*mozilla-firefox-bin-3.5_rc2 (20 Jun 2009)
+
+  20 Jun 2009; Raúl Porcel <armin76@gentoo.org>
+  -mozilla-firefox-bin-3.5_rc1.ebuild, +mozilla-firefox-bin-3.5_rc2.ebuild:
+  Version bump
+
+*mozilla-firefox-bin-3.5_rc1 (19 Jun 2009)
+
+  19 Jun 2009; Raúl Porcel <armin76@gentoo.org>
+  -mozilla-firefox-bin-3.5_beta4.ebuild,
+  -mozilla-firefox-bin-3.5_beta99.ebuild,
+  +mozilla-firefox-bin-3.5_rc1.ebuild:
+  Version bump
 
   16 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
   mozilla-firefox-bin-3.0.11.ebuild:
