--- a/x11-proto/glproto/ChangeLog
+++ b/x11-proto/glproto/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for x11-proto/glproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.57 2009/05/05 15:11:36 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/glproto/ChangeLog,v 1.59 2009/06/19 21:12:18 remi Exp $
+
+  19 Jun 2009; Rémi Cardona <remi@gentoo.org> -glproto-1.4.8.ebuild:
+  drop old ebuilds
+
+*glproto-1.4.10 (19 Jun 2009)
+
+  19 Jun 2009; Rémi Cardona <remi@gentoo.org> +glproto-1.4.10.ebuild:
+  bump to 1.4.10, update license to SGI-B-2.0
 
   05 May 2009; Christian Faulhammer <fauli@gentoo.org> glproto-1.4.8.ebuild,
   glproto-1.4.9.ebuild:
