--- a/x11-proto/inputproto/ChangeLog
+++ b/x11-proto/inputproto/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for x11-proto/inputproto
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.76 2009/05/15 14:26:43 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.78 2009/06/20 09:32:57 remi Exp $
+
+*inputproto-1.5.1 (20 Jun 2009)
+
+  20 Jun 2009; Rémi Cardona <remi@gentoo.org> +inputproto-1.5.1.ebuild:
+  bump to 1.5.1
+
+  19 Jun 2009; Rémi Cardona <remi@gentoo.org> -inputproto-1.4.2.ebuild,
+  -inputproto-1.4.3.ebuild, -inputproto-1.4.3-r1.ebuild,
+  -inputproto-1.4.4.ebuild:
+  drop old ebuilds
 
   15 May 2009; Raúl Porcel <armin76@gentoo.org> inputproto-1.5.0.ebuild:
   arm/m68k/s390 stable
