--- a/app-portage/gentoolkit/ChangeLog
+++ b/app-portage/gentoolkit/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for app-portage/gentoolkit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.159 2009/06/01 17:47:26 fuzzyray Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.161 2009/06/19 17:25:18 fuzzyray Exp $
+
+  19 Jun 2009; Paul Varner <fuzzyray@gentoo.org> ChangeLog:
+  Fix tracker bug typo in the ChangeLog for gentoolkit-0.3.0. The tracker
+  bug is 237964
+
+*gentoolkit-0.3.0_rc7 (19 Jun 2009)
+
+  19 Jun 2009; Paul Varner <fuzzyray@gentoo.org>
+  +gentoolkit-0.3.0_rc7.ebuild:
+  gentoolkit-0.3.0_rc7 version bump. This version fixes bugs 232635, 259337,
+  269171, 269175, 269196, 269454, 270407, 272492, and 273228 
+
+  Bug 237964 tracks changes to gentoolkit-0.3.0.
 
 *gentoolkit-0.2.4.5 (01 Jun 2009)
 
@@ -30,7 +43,7 @@
   218312, 256013, 266996, and 268513. Bug 268001 tracks changes to
   gentoolkit-0.2.4.
   gentoolkit-0.3.0_rc6 version bump. This version fixes bugs 170784, 182990,
-  218312, and 268895. Bug 237694 tracks changes to gentoolkit-0.3.0.
+  218312, and 268895. Bug 237964 tracks changes to gentoolkit-0.3.0.
 
   17 May 2009; Alexis Ballier <aballier@gentoo.org>
   gentoolkit-0.3.0_rc5.ebuild:
