--- a/app-text/lcdf-typetools/ChangeLog
+++ b/app-text/lcdf-typetools/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-text/lcdf-typetools
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.37 2009/04/09 07:23:30 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/lcdf-typetools/ChangeLog,v 1.39 2009/06/19 20:15:22 aballier Exp $
+
+  19 Jun 2009; Alexis Ballier <aballier@gentoo.org>
+  -lcdf-typetools-2.75.ebuild, -lcdf-typetools-2.78.ebuild:
+  remove old
+
+*lcdf-typetools-2.79 (19 Jun 2009)
+
+  19 Jun 2009; Alexis Ballier <aballier@gentoo.org>
+  +lcdf-typetools-2.79.ebuild:
+  version bump
 
 *lcdf-typetools-2.78 (09 Apr 2009)
 
