--- a/dev-lang/ocaml/ChangeLog
+++ b/dev-lang/ocaml/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for dev-lang/ocaml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.165 2009/06/15 22:53:03 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/ocaml/ChangeLog,v 1.168 2009/06/20 16:12:58 aballier Exp $
+
+  20 Jun 2009; Alexis Ballier <aballier@gentoo.org> ocaml-3.11.1.ebuild:
+  use CHOST prefixed toolchain for building, this does not give us cross
+  compile support though
+
+  20 Jun 2009; Alexis Ballier <aballier@gentoo.org>
+  -files/ocaml-3.11.0_beta1-configure.patch,
+  -files/ocaml-3.11.0_beta1-exec-stack-fixes.patch,
+  -files/ocaml-3.11.0_beta1-yaccldflags.patch, ocaml-3.11.1.ebuild:
+  Make a tarball from the various patches
+
+  19 Jun 2009; Alexis Ballier <aballier@gentoo.org> -ocaml-3.11.0.ebuild:
+  remove old
 
 *ocaml-3.11.1 (15 Jun 2009)
 
