--- a/dev-lang/php/ChangeLog
+++ b/dev-lang/php/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.331 2009/05/26 16:54:58 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.333 2009/06/19 14:40:22 hoffie Exp $
+
+*php-5.2.10 (19 Jun 2009)
+
+  19 Jun 2009; Christian Hoffmann <hoffie@gentoo.org> +php-5.2.10.ebuild:
+  version bump per security bug 274670, fixes at least one security problem
+  (DoS) and introduces getopt long support for Gentoo users as requested
+
+  19 Jun 2009; Christian Hoffmann <hoffie@gentoo.org> -php-5.2.8-r2.ebuild,
+  -php-5.2.9.ebuild, -php-5.2.9-r1.ebuild:
+  clean up old and vulnerable
 
   26 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   ChangeLog:
