--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13683 (24 Jun 2009)
+
+  24 Jun 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13621.ebuild, +portage-2.2.00.13683.ebuild:
+  Version bump for haubi's postsync fix
+
 *portage-2.2.00.13629 (12 Jun 2009)
 
   12 Jun 2009; Fabian Groffen <grobian@gentoo.org>
