--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  30 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
+  portage-2.2.00.13683.ebuild:
+  sys-apps/sandbox has caused multiple headaches in the past weeks, for now
+  we no longer hard depend on it. If it is emerged, you can still use it,
+  however
+
 *portage-2.2.00.13683 (24 Jun 2009)
 
   24 Jun 2009; Fabian Groffen <grobian@gentoo.org>
