--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13734 (01 Jul 2009)
+
+  01 Jul 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13625.ebuild, +portage-2.2.00.13734.ebuild:
+  New snapshot, using a 'modular' emerge/__init__.py
+
   30 Jun 2009; Jeremy Olexa <darkside@gentoo.org>
   portage-2.2.00.13683.ebuild:
   sys-apps/sandbox has caused multiple headaches in the past weeks, for now
