--- a/dev-perl/crypt-cbc/ChangeLog
+++ b/dev-perl/crypt-cbc/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-perl/crypt-cbc
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/crypt-cbc/ChangeLog,v 1.61 2008/09/15 19:42:41 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/crypt-cbc/ChangeLog,v 1.63 2009/07/02 20:06:08 jer Exp $
+
+  02 Jul 2009; Jeroen Roovers <jer@gentoo.org> crypt-cbc-2.29.ebuild:
+  Stable for HPPA too.
+
+*crypt-cbc-2.30 (02 Oct 2008)
+
+  02 Oct 2008; Torsten Veller <tove@gentoo.org> +crypt-cbc-2.30.ebuild:
+  Version bump.
 
   15 Sep 2008; Torsten Veller <tove@gentoo.org> -crypt-cbc-2.17.ebuild,
   -crypt-cbc-2.19.ebuild, -crypt-cbc-2.21.ebuild:
