--- a/app-admin/emacs-updater/ChangeLog
+++ b/app-admin/emacs-updater/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-admin/emacs-updater
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/emacs-updater/ChangeLog,v 1.18 2009/06/05 06:31:02 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/emacs-updater/ChangeLog,v 1.21 2009/07/06 14:46:51 armin76 Exp $
+
+  06 Jul 2009; Raúl Porcel <armin76@gentoo.org> emacs-updater-1.5.ebuild:
+  alpha/arm/ia64/s390/sh/x86 stable wrt #276640
+
+  06 Jul 2009; Jeroen Roovers <jer@gentoo.org> emacs-updater-1.5.ebuild:
+  Stable for HPPA (bug #276640).
+
+  05 Jul 2009; Ferris McCormick <fmccor@gentoo.org>
+  emacs-updater-1.5.ebuild:
+  Sparc stable, bug #276640.
 
 *emacs-updater-1.5 (05 Jun 2009)
 
