--- a/app-admin/eselect-python/ChangeLog
+++ b/app-admin/eselect-python/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for app-admin/eselect-python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.24 2009/06/06 17:20:01 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.28 2009/07/08 14:23:38 armin76 Exp $
+
+  08 Jul 2009; Raúl Porcel <armin76@gentoo.org>
+  eselect-python-20090606.ebuild:
+  alpha/arm/ia64/m68k/s390/sh stable wrt #276590
+
+  08 Jul 2009; Ferris McCormick <fmccor@gentoo.org>
+  eselect-python-20090606.ebuild:
+  Sparc stable, bug #276590.
+
+  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
+  eselect-python-20090606.ebuild:
+  stable x86, bug 276590
+
+  08 Jul 2009; Jeroen Roovers <jer@gentoo.org>
+  eselect-python-20090606.ebuild:
+  Stable for HPPA (bug #276590).
 
 *eselect-python-20090606 (06 Jun 2009)
 
