--- a/app-cdr/cdrkit/ChangeLog
+++ b/app-cdr/cdrkit/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-cdr/cdrkit
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrkit/ChangeLog,v 1.73 2009/06/17 20:15:27 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-cdr/cdrkit/ChangeLog,v 1.75 2009/07/05 13:13:54 maekke Exp $
+
+  05 Jul 2009; Markus Meier <maekke@gentoo.org> cdrkit-1.1.9-r1.ebuild:
+  amd64 stable, bug #274260
+
+  03 Jul 2009; Brent Baude <ranger@gentoo.org> cdrkit-1.1.9-r1.ebuild:
+  Marking cdrkit-1.1.9-r1 ppc64 for bug 274260
 
   17 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
   cdrkit-1.1.9-r1.ebuild:
