--- a/app-emacs/emacs-w3m/ChangeLog
+++ b/app-emacs/emacs-w3m/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-emacs/emacs-w3m
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/emacs-w3m/ChangeLog,v 1.60 2009/06/08 19:54:57 ulm Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/emacs-w3m/ChangeLog,v 1.62 2009/07/08 10:56:10 fauli Exp $
+
+  08 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
+  emacs-w3m-1.4.4-r3.ebuild:
+  stable x86, bug 276975
+
+  07 Jul 2009; Ferris McCormick <fmccor@gentoo.org>
+  emacs-w3m-1.4.4-r3.ebuild:
+  Sparc stable, Bug #276975.
 
 *emacs-w3m-1.4.4_p20090605 (08 Jun 2009)
 *emacs-w3m-1.4.4-r3 (08 Jun 2009)
