--- a/app-emacs/gentoo-syntax/ChangeLog
+++ b/app-emacs/gentoo-syntax/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for app-emacs/gentoo-syntax
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/gentoo-syntax/ChangeLog,v 1.38 2009/05/30 13:25:06 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/gentoo-syntax/ChangeLog,v 1.41 2009/07/06 14:45:20 armin76 Exp $
+
+  06 Jul 2009; Raúl Porcel <armin76@gentoo.org> gentoo-syntax-1.12.ebuild:
+  alpha/ia64/x86 stable wrt #276638
+
+  06 Jul 2009; Jeroen Roovers <jer@gentoo.org> gentoo-syntax-1.12.ebuild:
+  Stable for HPPA (bug #276638).
+
+  05 Jul 2009; Ferris McCormick <fmccor@gentoo.org>
+  gentoo-syntax-1.12.ebuild:
+  Sparc stable, bug #276638.
 
 *gentoo-syntax-1.12 (30 May 2009)
 
