--- a/app-text/build-docbook-catalog/ChangeLog
+++ b/app-text/build-docbook-catalog/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-text/build-docbook-catalog
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.24 2008/11/24 21:14:49 ranger Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/build-docbook-catalog/ChangeLog,v 1.26 2009/07/08 20:18:17 ssuominen Exp $
+
+  08 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
+  build-docbook-catalog-1.2.ebuild, build-docbook-catalog-1.4.ebuild:
+  keepdir /etc/xml to avoid stage building issues wrt #277092
+
+  08 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
+  build-docbook-catalog-1.2.ebuild, build-docbook-catalog-1.4.ebuild:
+  build-docbook-catalog needs getopt wrt #277092
 
   24 Nov 2008; Brent Baude <ranger@gentoo.org>
   build-docbook-catalog-1.4.ebuild:
