sync app-text/wgetpaste (Portage version: 2.2.00.13755-prefix/svn/SunOS i386)

--- a/app-text/wgetpaste/ChangeLog
+++ b/app-text/wgetpaste/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/wgetpaste
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/wgetpaste/ChangeLog,v 1.91 2009/07/01 16:46:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/wgetpaste/ChangeLog,v 1.93 2009/07/08 20:59:03 gentoofan23 Exp $
+
+  08 Jul 2009; Thomas Anderson <gentoofan23@gentoo.org>
+  wgetpaste-2.13.ebuild:
+  stable amd64, bug 276040
+
+  03 Jul 2009; Brent Baude <ranger@gentoo.org> wgetpaste-2.13.ebuild:
+  Marking wgetpaste-2.13 ppc64 for bug 276040
 
   01 Jul 2009; Jeroen Roovers <jer@gentoo.org> wgetpaste-2.13.ebuild:
   Stable for HPPA (bug #276040).
