--- a/dev-lang/python/ChangeLog
+++ b/dev-lang/python/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/python
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.390 2009/06/30 20:42:56 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/python/ChangeLog,v 1.392 2009/07/05 21:03:41 maekke Exp $
+
+  05 Jul 2009; Markus Meier <maekke@gentoo.org> python-2.5.4-r3.ebuild:
+  amd64 stable, bug #275311
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> python-2.5.4-r3.ebuild:
+  stable ppc64, bug 275311
 
   30 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
   python-2.5.4-r3.ebuild:
