--- a/dev-lang/swi-prolog/ChangeLog
+++ b/dev-lang/swi-prolog/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.185 2009/06/13 04:28:22 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.187 2009/07/04 05:36:37 keri Exp $
+
+  04 Jul 2009; <keri@gentoo.org> -swi-prolog-5.7.6.ebuild,
+  -swi-prolog-5.7.7.ebuild, -swi-prolog-5.7.8.ebuild,
+  -swi-prolog-5.7.9.ebuild, -swi-prolog-5.7.10.ebuild:
+  Remove old development versions
+
+*swi-prolog-5.7.11 (04 Jul 2009)
+
+  04 Jul 2009; <keri@gentoo.org> +swi-prolog-5.7.11.ebuild:
+  Bump -5.7 development version
 
 *swi-prolog-5.7.10 (13 Jun 2009)
 
