--- a/dev-ruby/facter/ChangeLog
+++ b/dev-ruby/facter/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/facter
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.15 2009/06/18 11:05:56 gentoofan23 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facter/ChangeLog,v 1.17 2009/07/05 03:34:46 matsuu Exp $
+
+  05 Jul 2009; MATSUU Takuto <matsuu@gentoo.org> facter-1.5.6.ebuild:
+  Removed ruby19 from USE_RUBY, bug #275998.
+
+  04 Jul 2009; Hans de Graaff <graaff@gentoo.org> -facter-1.5.2.ebuild:
+  Remove old version.
 
   18 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
   facter-1.5.2-r1.ebuild:
