--- a/gnome-base/gnome-vfs/ChangeLog
+++ b/gnome-base/gnome-vfs/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/gnome-vfs
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.304 2009/04/28 11:21:38 armin76 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.306 2009/07/07 21:27:15 fauli Exp $
+
+  07 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
+  gnome-vfs-2.24.1.ebuild:
+  stable x86, bug 275699
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> gnome-vfs-2.24.1.ebuild:
+  Marking gnome-vfs-2.24.1 ppc64 for bug 275699
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-vfs-2.24.0.ebuild:
   sh stable
