--- a/java-virtuals/jaf/ChangeLog
+++ b/java-virtuals/jaf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for java-virtuals/jaf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jaf/ChangeLog,v 1.7 2009/07/01 09:20:44 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jaf/ChangeLog,v 1.9 2009/07/05 20:38:11 maekke Exp $
+
+  05 Jul 2009; Markus Meier <maekke@gentoo.org> jaf-1.1-r1.ebuild:
+  amd64 stable, bug #275184
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> jaf-1.1-r1.ebuild:
+  Marking jaf-1.1-r1 ppc64 for bug 275184
 
   01 Jul 2009; Christian Faulhammer <fauli@gentoo.org> jaf-1.1-r1.ebuild:
   stable x86, bug 275184
