--- a/java-virtuals/jmx/ChangeLog
+++ b/java-virtuals/jmx/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for java-virtuals/jmx
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jmx/ChangeLog,v 1.6 2009/07/01 09:17:17 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/jmx/ChangeLog,v 1.8 2009/07/05 20:42:36 maekke Exp $
+
+  05 Jul 2009; Markus Meier <maekke@gentoo.org> jmx-1.0-r1.ebuild:
+  amd64 stable, bug #275188
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> jmx-1.0-r1.ebuild:
+  Marking jmx-1.0-r1 ppc64 for bug 275188
 
   01 Jul 2009; Christian Faulhammer <fauli@gentoo.org> jmx-1.0-r1.ebuild:
   stable x86, bug 275188
