--- a/java-virtuals/servlet-api/ChangeLog
+++ b/java-virtuals/servlet-api/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for java-virtuals/servlet-api
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.21 2009/05/23 19:46:00 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/java-virtuals/servlet-api/ChangeLog,v 1.23 2009/07/04 14:52:54 ranger Exp $
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> servlet-api-2.2.ebuild:
+  Marking servlet-api-2.2 ppc64 for bug 274798
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> servlet-api-2.4.ebuild:
+  Marking servlet-api-2.4 ppc64 for bug 243118
 
   23 May 2009; nixnut <nixnut@gentoo.org> servlet-api-2.5.ebuild:
   ppc stable #270915
