--- a/net-im/pidgin/ChangeLog
+++ b/net-im/pidgin/ChangeLog
@@ -1,6 +1,24 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.104 2009/06/29 23:21:35 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.110 2009/07/08 14:21:42 armin76 Exp $
+
+  08 Jul 2009; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.8.ebuild:
+  alpha/ia64 stable wrt #276000
+
+  07 Jul 2009; Tobias Heinlein <keytoaster@gentoo.org> pidgin-2.5.8.ebuild:
+  amd64 stable, security bug #276000
+
+  07 Jul 2009; Christian Faulhammer <fauli@gentoo.org> pidgin-2.5.8.ebuild:
+  stable x86, security bug 276000
+
+  06 Jul 2009; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.8.ebuild:
+  Stable for HPPA (bug #276000).
+
+  06 Jul 2009; Ferris McCormick <fmccor@gentoo.org> pidgin-2.5.8.ebuild:
+  Sparc stable, security bug #276000.
+
+  06 Jul 2009; Brent Baude <ranger@gentoo.org> pidgin-2.5.8.ebuild:
+  Marking pidgin-2.5.8 ppc64 and ppc for bug 276000
 
 *pidgin-2.5.8 (29 Jun 2009)
 
