--- a/perl-core/ExtUtils-CBuilder/ChangeLog
+++ b/perl-core/ExtUtils-CBuilder/ChangeLog
@@ -1,6 +1,22 @@
 # ChangeLog for perl-core/ExtUtils-CBuilder
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.4 2009/06/30 06:25:37 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-CBuilder/ChangeLog,v 1.7 2009/07/07 02:14:28 jer Exp $
+
+  07 Jul 2009; Jeroen Roovers <jer@gentoo.org>
+  ExtUtils-CBuilder-0.23.ebuild:
+  Stable for HPPA too.
+
+*ExtUtils-CBuilder-0.26.02 (05 Jul 2009)
+
+  05 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-CBuilder-0.26.02.ebuild:
+  Version bump
+
+*ExtUtils-CBuilder-0.26.01 (03 Jul 2009)
+
+  03 Jul 2009; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-CBuilder-0.26.01.ebuild:
+  Version bump
 
 *ExtUtils-CBuilder-0.26 (30 Jun 2009)
 
