--- a/perl-core/Test-Simple/ChangeLog
+++ b/perl-core/Test-Simple/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for perl-core/Test-Simple
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.56 2009/05/31 07:34:01 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/Test-Simple/ChangeLog,v 1.59 2009/07/07 02:27:31 jer Exp $
+
+  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> Test-Simple-0.80.ebuild:
+  Stable for HPPA too.
+
+*Test-Simple-0.92 (04 Jul 2009)
+
+  04 Jul 2009; Torsten Veller <tove@gentoo.org> +Test-Simple-0.92.ebuild:
+  Version bump
+
+*Test-Simple-0.90 (03 Jul 2009)
+
+  03 Jul 2009; Torsten Veller <tove@gentoo.org> +Test-Simple-0.90.ebuild:
+  Version bump
 
 *Test-Simple-0.88 (31 May 2009)
 
