--- a/sci-visualization/gnuplot/ChangeLog
+++ b/sci-visualization/gnuplot/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-visualization/gnuplot
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.108 2009/06/27 13:37:26 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gnuplot/ChangeLog,v 1.110 2009/07/06 14:51:12 armin76 Exp $
+
+  06 Jul 2009; Raúl Porcel <armin76@gentoo.org> gnuplot-4.2.5.ebuild:
+  ia64/s390/sparc stable wrt #274558
+
+  04 Jul 2009; Brent Baude <ranger@gentoo.org> gnuplot-4.2.5.ebuild:
+  Marking gnuplot-4.2.5 ppc64 for bug 274558
 
   27 Jun 2009; Tobias Klausmann <klausman@gentoo.org> gnuplot-4.2.5.ebuild:
   Stable on alpha, bug #274558
